# job-fit-agent

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
examples/mcp-demo/: README.md  server.py
src/job_fit_agent/: __init__.py  config.py  france_travail.py  llm.py  matcher.py  models.py  profile.py  sources.py
src/job_fit_agent/agent/: graph.py
src/job_fit_agent/api/: app.py  schemas.py
src/job_fit_agent/data/: profile.json
src/job_fit_agent/prompts/: __init__.py  agent_assess_system.md  agent_critic_system.md  fit_assess_system.md
tests/: test_api.py  test_config.py  test_mcp_demo.py  test_mcp_server.py  test_models.py  test_profile.py  test_prompts.py
