[project]
name = "job-fit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Achraf JAANINE", email = "jaanineachraf@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.5",
    "mcp[cli]>=1.27,<2",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
job-fit-agent = "job_fit_agent:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
